tests/03-typecheck/15-data-init.stack
data custom
    (int x, int y)

func invalid_constructor (int) (custom) in
    custom.init
end
